@@ -22,7 +22,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -41,41 +41,48 @@ public class SecurityConfig {
                 .headers(headers -> headers.frameOptions(frame -> frame.disable()))
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        // Pre-flight (CORS OPTIONS) sorğularına icazə
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // Açıq Endpoint-lər
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/users/resendOTP").permitAll()
                         .requestMatchers("/api/users/verify").permitAll()
-                        .requestMatchers("/api/auth/login").permitAll()
                         .requestMatchers("/api/upload/**").permitAll()
                         .requestMatchers("/uploads/**").permitAll()
                         .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
 
+                        // İctimai baxış və qeydiyyat Endpoint-ləri
                         .requestMatchers(HttpMethod.POST, "/api/customers").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/customers/v2").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/computers/**").permitAll()
-
-                        // YALNIZ ADMIN kompüter əlavə/redaktə/silə bilər
-                        .requestMatchers(HttpMethod.POST, "/api/computers/add").hasAuthority("ROLE_ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/api/computers/**").hasAuthority("ROLE_ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/computers/**").hasAuthority("ROLE_ADMIN")
-
-                        // Admin panel
-                        .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
                         .requestMatchers("/api/admin/check").permitAll()
 
-                        .requestMatchers("/api/customers/profile").authenticated()
+                        // ⚠️ YALNIZ KOMPÜTER SİLMƏ SORĞULARI HƏR KƏSƏ AÇILDI
+                        .requestMatchers(HttpMethod.DELETE, "/api/computers/**").permitAll()
+
+                        // YALNIZ ADMIN ƏMƏLİYYATLARI (Əlavə etmə, Yeniləmə və Admin paneli)
+                        .requestMatchers(HttpMethod.POST, "/api/computers/add").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/computers/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
+                        .requestMatchers("/api/admin/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
+
+                        // MÜŞTƏRİ VƏ ADMİN üçün autentifikasiya tələb olunan endpoint-lər
                         .requestMatchers("/api/customers/profile/**").authenticated()
+                        .requestMatchers("/api/customers/profile").authenticated()
                         .requestMatchers("/api/customers/v1").authenticated()
                         .requestMatchers("/api/customers/selling").authenticated()
                         .requestMatchers("/api/customers/buy").authenticated()
-                        .requestMatchers("/api/customers/delete").authenticated()
                         .requestMatchers("/api/customers/contact/**").authenticated()
+
+                        // Ödəniş və Səbət əməliyyatları
                         .requestMatchers("/api/payments/**").authenticated()
                         .requestMatchers("/api/cart/**").authenticated()
 
+                        // Qalan bütün sorğular təhlükəsizlik üçün autentifikasiya tələb edir
                         .anyRequest().authenticated()
                 );
 
+        http.authenticationProvider(authenticationProvider());
         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -84,14 +91,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://127.0.0.1:5500",
-                "http://localhost:5500",
-                "http://95.111.230.66:3000",
-                "http://95.111.230.66:8080"
-        ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
+
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept", "X-Requested-With", "Origin"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
